fix white space issue on the right of the screen

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,13 @@
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
+}
+.container-fluid {
+	padding: 0;
+}
 .close-panel {
 	display: inline-block;
 	width: 50px;
@@ -70,21 +80,6 @@
 }
 
 /*#######################*/
-
-body {
-	height: 100%;
-	width: 100%;
-}
-/* Boostrap row has min-height: 1px; */
-#foodDescription, #result, .map-holder, #goBack-holder, #description_map {
-	min-height: 0;
-}
-.row {
-	margin: 0;
-}
-.container-fluid {
-	padding: 0;
-}
 
 .navbar-inverse{
 	border-radius: 0px;
